--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,18 @@
 			<version>3.3.7</version>
 		</dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+
 	</dependencies>
 
 	<build>
